tarpc/tests/compile_fail/tarpc_server_missing_async.stderr
error: not all trait items implemented, missing: `HelloFut`
  --> $DIR/tarpc_server_missing_async.rs:12:1
   |
12 | / impl World for HelloServer {
13 | |     fn hello(name: String) ->  String {
14 | |         format!("Hello, {}!", name)
15 | |     }
16 | | }
   | |_^

error: hint: `#[tarpc::server]` only rewrites async fns, and `fn hello` is not async
  --> $DIR/tarpc_server_missing_async.rs:13:5
   |
13 |     fn hello(name: String) ->  String {
   |     ^^^^^^^^
